# WebSketch

./: .cursorrules  .gitignore  FEATURES.md  README.md  docker-compose.yml  package-lock.json  package.json
app/: layout.tsx  page.tsx
components/: CanvasContainer.tsx  PaletteSidebar.tsx  Toolbar.tsx
data/: websketch1.json
frontend/: .cursorrules  Dockerfile  next.config.ts  package-lock.json  package.json
sketchagent/: .cursorrules  ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml  requirements.txt
sketchagent/app/: __init__.py  config.py  main.py
sketchagent/app/agent/: __init__.py  graph.py  state.py
sketchagent/app/agent/nodes/: __init__.py  analyzer.py  executor.py  image_analyzer.py  modifier.py  validator.py
sketchagent/app/api/: debug_routes.py  dependencies.py  routes.py
sketchagent/app/schemas/: __init__.py  api.py  sketch.py
sketchagent/app/services/: image_analysis_service.py  llm_service.py  redis_service.py
sketchagent/app/tools/: __init__.py  operation_executor.py  sketch_parser.py
sketchagent/app/utils/: debug_logger.py  errors.py  logger.py
sketchagent/tests/: README.md  __init__.py  conftest.py  fixtures.py  helpers.py
sketchagent/tests/edge/: test_empty_sketch.py  test_single_component.py
sketchagent/tests/error/: __init__.py  test_execution_errors.py  test_validation_errors.py
sketchagent/tests/integration/: test_agent_workflow.py  test_api_endpoints.py  test_real_sketch.py  test_real_sketch_manual.py
sketchagent/tests/unit/: test_analyzer_node.py  test_executor_node.py  test_modifier_node.py  test_validator_node.py
src/app/: page.tsx
(+74 files in other folders)
